Resolves: fdo#65743 MovePara gets stuck on hidden para fields

Change-Id: I03b26aaa9be491e760335185c5a9ffd5d04990bb
(cherry picked from commit 61533b8c54077bf1aa203f503e271037b6553411)
Reviewed-on: https://gerrit.libreoffice.org/4568
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>